--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,8 @@
     ],
     "require": {
         "php": ">=7.0.0",
-        "typo3/cms": "~8.7",
-        "codappix/search_core": "0.0.4",
+        "typo3/cms-core": ">= 8.7 < 10.0.0",
+        "codappix/search_core": "~0.0.4",
         "algolia/algoliasearch-client-php": "^1.23",
         "symfony/dotenv": "3.4"
     },
