--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     "require": {
         "php": ">=7.0.0",
         "typo3/cms-core": ">= 8.7 < 10.0.0",
-        "codappix/search_core": "~0.0.4",
+        "codappix/search_core": "*",
         "algolia/algoliasearch-client-php": "^1.23",
         "symfony/dotenv": "3.4"
     },
