--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     "require": {
         "php": ">=7.0.0",
         "typo3/cms-core": ">= 8.7.0 < 10.0.0",
-        "codappix/search_core": "dev-feature/update-9",
+        "codappix/search_core": "dev-feature/dynamic-licenses",
         "algolia/algoliasearch-client-php": "^1.23",
         "symfony/dotenv": "3.4"
     },
